# topic-sentiment

./: README.md  app.py  lda_sentiment.ipynb  pyproject.toml
docs/: np_presentation.pptx
lda_model/: lda_model.gensim  lda_model.gensim.expElogbeta.npy  lda_model.gensim.id2word  lda_model.gensim.state  lda_visualization.html
