[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "bertopic>=0.16.4",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.39.0",
]
